--- a/train.ipynb
+++ b/train.ipynb
@@ -23,13 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "import torch\n",
     "torch.cuda.is_available()"
@@ -290,9 +301,13 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.0 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "ac6cdaf0223e7b2c00af379098df1fa9e29bd2906db270150e00ce3de52e9295"
+    }
+   }
   },
   "language_info": {
    "codemirror_mode": {
@@ -304,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.0-final"
   }
  },
  "nbformat": 4,
